Terraform/compute.tf
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-*-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

resource "aws_instance" "web" {
  ami           = data.aws_ami.ubuntu.id
  instance_type = "t3.micro"

  user_data = <<-EOF
        #!/bin/bash
        apt-get update -y
        apt-get install -y apache2 ruby wget
        systemctl start apache2
        systemctl enable apache2

        # Install CodeDeploy agent
        cd /home/ubuntu
        wget https://aws-codedeploy-us-east-1.s3.amazonaws.com/latest/install
        chmod +x ./install
        ./install auto
        systemctl start codedeploy-agent
        systemctl enable codedeploy-agent
      EOF


  tags = {
    Name = "EC2-CODE-DEPLOY"
    Env  = "Production"
  }
}
